<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment2</string>
    <string name="action_settings">Settings</string>
    <string name="test">테스트</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="man">남</string>
    <string name="woman">여</string>
    <string name="reception">수신여부</string>
    <string name="interest_part">관심분야</string>
    <string name="send">전송</string>
   

</resources>
