<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  	android:orientation="vertical"
    >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">	    
	     <TextView
	      android:id="@+id/textView1"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/name" />
	   	<EditText
	       android:id="@+id/edittext1"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"	
	   />
	</LinearLayout>
	 <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView 
	        android:id="@+id/textview2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/gender"
	    />
	 	<RadioGroup
	 	    android:id="@+id/rad_check"
	         android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:orientation="horizontal">
	    <RadioButton 
	        android:id="@+id/radiobutton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
   	        android:text="@string/man"
	    /> 
	    <RadioButton 
	        android:id="@+id/radiobutton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/woman"
	    />
	    </RadioGroup>
	 </LinearLayout>
	  
	   <LinearLayout 
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	    <TextView 
	     	android:id="@+id/textview3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reception"   
	     />
	    <CheckBox 
	    	android:id="@+id/checkbox1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="SMS"
	    />   	       
	   </LinearLayout> 
	   <LinearLayout 
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
	   >
	       <TextView 
	     	android:id="@+id/textview4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/interest_part"  
	     />
	    <Spinner
	    	android:id="@+id/spinner1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/part_array"
	    /> 
	       
	   </LinearLayout>
	    
	    <Button 
	    	android:id="@+id/button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/send"		    
	    />	  
</LinearLayout>